# vibecrafted

./: .dockerignore  .gitignore  .loctreeignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  VETCODERS.md  install.sh  install.sh.sha256  install.toml  mise.toml  pyproject.toml  vetcoders-suite-showcase.html  vibecraft-framework.plugin  vibecrafted-framework.plugin
ai-contexters/: SKILL.md
bravesearch/: SKILL.md
config/: README.md  mise.toml  starship.toml
docker/: entrypoint.sh
docs/: DOCKER.md  FAQ-ANSWERED.md  FAQ.md  FOUNDATION.md  FRONTIER.md  MARKETPLACE_LISTING.md  MODULARIZATION_PLAN_2026_04_16.md  PERCEPTION.md  QUICK_START.md  RELEASE_KICKOFF.md  REPO_GROUND_TRUTH_2026_04_13.md  SKILLS.md  SUBMISSION_FORMS.md  THE_VIBE_HANGOVER.md  VIBECRAFTED.md  VIBECRAFTED_PITCH.md  WHAT_IS_VIBECRAFTED.md  WORKFLOWS.md  app.js  index.html  robots.txt  sitemap.xml  styles.css  vibecrafted.pl.md
loctree/: SKILL.md
operator-tui/: Cargo.toml  README.md
operator-tui/src/: app.rs  config.rs  launch.rs  lib.rs  main.rs  state.rs  ui.rs
operator-tui/tests/: state_contract.rs
pdf/: SKILL.md
presence/: app.js  index.html  sitemap.xml  styles.css
runtime/: README.md
scripts/: build_marketplace_bundle.py  check-portable.sh  check_shell.py  control_plane_launch.py  control_plane_state.py  install-foundations.sh  installer_brand.py  installer_gui.py  installer_tui.py  migrate-to-vibecrafted.sh  migrate_agents_workspace.sh  (+6 more)
scripts/installer/: README.md  pyproject.toml
scripts/installer/vetcoders_installer/: __init__.py  tui.py
vibecrafted-mcp/: README.md  pyproject.toml
vibecrafted-mcp/tests/: conftest.py  test_server.py
vibecrafted-mcp/vibecrafted_mcp/: __init__.py  server.py  synthesis.py
(+282 files in other folders)
