[package]
name = "vibecrafted-operator"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["VetCoders"]
description = "Rust operator console for Vibecrafted"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

