[project]
name = "vibecrafted-mcp"
version = "0.1.0"
description = "MCP server for the Vibecrafted operator framework — synthesis brain for the VetCoders ecosystem."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "vibecrafted-core>=0.1.0",
]

[project.scripts]
vibecrafted-mcp = "vibecrafted_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vibecrafted_mcp"]

[tool.uv.sources]
vibecrafted-core = { workspace = true }
