[project]
name = "vetcoders-installer"
version = "0.1.0"
description = "Built-in installer runner for Vibecrafted — manifest-driven, cargo-style sticky progress."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Maciej Gad", email = "void@div0.space" },
    { name = "Monika Szymańska", email = "hello@vetcoders.io" },
]
dependencies = [
    "rich>=13.0",
    "textual>=8.2.3",
]

[project.scripts]
vetcoders-installer = "vetcoders_installer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vetcoders_installer"]
